--- a/nodejs_sequelize/package.json
+++ b/nodejs_sequelize/package.json
@@ -4,7 +4,8 @@
   "main": "server.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "dev" : "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.17.3",
