--- a/books_rest_api/package.json
+++ b/books_rest_api/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon server.js"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.17.3",
