--- a/instagram_api/package.json
+++ b/instagram_api/package.json
@@ -4,13 +4,18 @@
   "main": "server.js",
   "license": "MIT",
   "scripts": {
+    "test": "jest --coverage",
     "dev": "nodemon server.js"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "express": "^4.18.0",
+    "google-auth-library": "^8.0.2",
+    "jest": "^28.1.0",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.15",
     "pg": "^8.7.3",
     "sequelize": "^6.19.0",
